<resources>
    <string name="app_name">Student\'s diary</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="buttonClearAll">Complete cleaning</string>
    <string name="buttonClearGrades">Grades</string>
    <string name="buttonClearHomeWork">Homework</string>
    <string name="cancel">Cancel</string>
    <string name="clearWeek">Clears current week</string>
    <string name="save">Save</string>
    <string name="lessonTitle">Lesson title</string>
    <string name="lessonExample">English language</string>
    <string name="newTeacher">New teacher</string>
    <string name="fio">Last Name First Name Middle Name:</string>
    <string name="fioExample">Ivanov Ivan Ivanovich</string>
    <string name="teachers">Teachers</string>
    <string name="yes">Yes</string>
    <string name="deleting">Cleaning</string>
    <string name="deleteAllTeachers">Delete all teachers?</string>
    <string name="FieldsNot">Fields must not be empty!</string>
    <string name="newLesson">New lesson or couple</string>
    <string name="lessonStartTime">Lesson start time:</string>
    <string name="lessonEndTime">Lesson end time:</string>
    <string name="location">Location:</string>
    <string name="classroomSchool">Classroom(School)</string>
    <string name="classroomUniversity">Classroom(University)</string>
    <string name="classroomNumber">Classroom number:</string>
    <string name="deleteAllLesson">Clear only:</string>
    <string name="deleteOneDayLesson">Current day</string>
    <string name="deleteAllDayLesson">All day</string>
    <string name="timeSpan">The time span must not be the same as the previous or begin later, but end sooner!</string>
    <string name="timeSpanStartEnd">Not a valid span! Start time cannot be greater than end time and per revolution!</string>
    <string name="editLesson">Edit lesson</string>
    <string name="editCouple">Edit couple</string>
    <string name="timetables">Timetables</string>
    <string name="obzOne">This appendix is a project of pupil 9 \'B\' class, MBEI Gymnasium №25 of the city of Irkutsk, Perfiliev KonstantinaAlexandrovich for the 9th grade</string>
    <string name="obzTwo">Application has open source code on GitHub</string>
    <string name="obzThree">Want to help translate the app? You can do this on the website \"Transifex\"</string>
    <string name="obzFour">Found a typo, translation error or programs, there are development tips or suggestions? Boldly write to the author!</string>
    <string name="obzSix">Translators:</string>
    <string name="obzSeven">Russian and English - Konstantin Perfiliev</string>
    <string name="help">Help</string>
    <string name="donate">Donate</string>
    <string name="grades">Grades</string>
    <string name="warningOcenki">You will not be able to edit the grades after confirmation!</string>
    <string name="Quarter">Quarter</string>
    <string name="gradesYear">Year</string>
    <string name="gradesExamination">Examination</string>
    <string name="gradesEnd">End</string>
    <string name="settings">Settings</string>
    <string name="setting">Setting</string>
    <string name="Ok">OK</string>
    <string name="Warning">Warning</string>
    <string name="chooseMonth">Select the start month of the school year:</string>
    <string name="notChooseMonth">You didn\'t choose the start month of the school year</string>
    <string name="behavior">Behavior</string>
    <string name="Confirmed">Confirmed</string>
    <string name="Not_Confirmed">Not confirmed</string>
    <string name="ConfirmationMicrophone">Voice confirmation of teacher</string>
    <string name="ConfirmationCamera">Photo of the teacher\'s autograph</string>
    <string name="NotCameraPermission">This feature requires access to the camera!</string>
    <string name="NotMicrophonePermission">This feature requires access to the microphone!</string>
    <string name="NotStoragePermission">To record data, you need access to the Explorer!</string>
    <string name="StartMicro">Start</string>
    <string name="PauseMicro">Pause</string>
    <string name="ResumeMicro">Resume</string>
    <string name="Voice_recording">Voice recording:</string>
    <string name="ConfirmedByPhoto">Confirmed by photo</string>
    <string name="ConfirmedByVoice">Confirmed by recording the teacher\'s voice</string>
    <string name="apiError">On API 24 devices and below, this feature is not yet supported</string>
    <string name="nullTimetablesName">You have not yet added a timetables</string>
    <string name="nullTimetablesKab">for this day of the week</string>
    <string name="nullTimetablesDz">Add timetables</string>
    <string name="lessonConst">Lesson</string>
    <string name="homeworkConst">Homework</string>
    <string name="nullZvon">Add a schedule \n for this wonderful day \n by clicking on the button in the lower right corner</string>
    <string name="nullYchit">Add the first teacher \n by clicking the button in the lower right corner</string>
    <string name="warningPovtorYct">Teacher name and lesson name already recorded</string>
    <string name="NotifSettingsName">Lesson Notification</string>
    <string name="PovedSettings">Add field \"Behaviors\"</string>
    <string name="WhatSettings">This parameter will affect something</string>
    <string name="General_setting">General setting</string>
    <string name="DaySizeSetting">Block size \"Day\"</string>
    <string name="StartYrok">Until the start of the lesson</string>
    <string name="EndYrok">Until the end of the lesson</string>
    <string name="EndPeremen">Until the end break time</string>
    <string name="AnimationSetting">Animations</string>
    <string name="Themes">Themes</string>
    <string name="DarkTheme">Dark theme</string>
    <string name="WhiteTheme">Light theme</string>
    <string name="themeAdd">CREATE CUSTOM THEME</string>
    <string name="Apply_Theme">Apply Theme</string>
    <string name="Saving_theme">Saving theme</string>
    <string name="HEX_code">HEX code</string>
    <string name="Choose_color">Color palette</string>
    <string name="alert_boreder_setting">Dialog stroke</string>
    <string name="width_stroke_setting">Width of stroke</string>
    <string name="alrt_color_default_setting">Default color selection</string>
    <string name="not_chosen">Not chosen</string>
    <string name="loading">Loading</string>
    <string name="you_have_already_confirmed_grades">You have already confirmed the grades</string>
    <string name="ReplaceOcenki">Clear quarter?</string>
    <string name="errorMicro">Microphone is occupied by another program</string>
    <string name="fragment_default">Default fragment</string>
    <string name="fragment_default_off">Disabled</string>
    <string name="error_not">An unexpected error occurred during execution, the error was saved</string>
    <string name="errors">Errors</string>
    <string name="errors_null">There was no mistake yet!</string>
    <string name="edit_mount_grades">Quarter Start Date</string>
    <string name="title_clear">Data cleaning</string>
    <string name="title_clear_alert">Delete block data:</string>
    <string name="number_quarters">Number of quarters: </string>
    <string name="number_quarters_warning">There can\'t be 0 quarters!</string>
    <string name="nullGrades">Click on this text to specify the number of quarters and the start month of training</string>
    <string name="errorGrades">Error: no confirmation found</string>
    <string name="icgradesExamination">Examination grades</string>
    <string name="icgradesYear">Year grades</string>
    <string name="icgradesEnd">End grades</string>
    <string name="newTheme">New theme</string>
    <string name="data">Data</string>
    <string name="import_data">Import</string>
    <string name="export_data">Export</string>
    <string name="exportOk">Settings were successfully exported!</string>
    <string name="saving">Saving</string>
    <string name="applying">Applying</string>
    <string name="faq">FAQ</string>
    <string name="faqBackups">Where are backups saved?</string>
    <string name="faqConfirmations">Where are confirmation saved?(You can\'t delete them)</string>
    <string name="faqError">Where are errors saved?</string>
    <string name="warning_file">You must select an archive!</string>
    <string name="setWhiteThemeSettings">You have set a light theme in your android settings, do you want to apply it here?</string>
    <string name="setDarkThemeSettings">You have set a dark theme in your android settings, do you want to apply it here?</string>
    <string name="title_change_theme">Changing theme</string>
    <string name="cancel_change_theme">Do not show</string>
    <string name="remove_bottom_padding">Remove margins from navigation bar</string>
    <string name="faqNotify">After a while, notifications stop being updated?\n\nClick here to find out how to fix it\n</string>
    <string name="update">Update</string>
    <string name="update_setup">Do you want to update the app to a new version?</string>
    <string name="downloaded">Downloaded</string>
    <string name="installation">Installation</string>
    <string name="install_updates">Click here to install updates</string>
    <string name="custom_color_name">Theme name</string>
    <string name="custom_color_icon">Сolor of theme icon</string>
    <string name="custom_color_border_theme">Border color of theme</string>
    <string name="custom_color_background">Background color</string>
    <string name="custom_color_toolbar">Toolbar color</string>
    <string name="custom_color_text_toolbar">Сolor of toolbar text</string>
    <string name="custom_color_text_light">Light color of text</string>
    <string name="custom_color_text_dark">Dark color of text</string>
    <string name="custom_color_text_hint">Hint text color</string>
    <string name="custom_color_cursor">Cursor color</string>
    <string name="custom_color_card">Card color</string>
    <string name="custom_color_bottomBorder">Сolor of bottom border</string>
    <string name="custom_color_button_add">Button add color</string>
    <string name="custom_color_button_add_plus">Button add plus color</string>
    <string name="custom_color_button_act">Action button color</string>
    <string name="custom_color_button_arrow">Color of arrow and menu buttons</string>
    <string name="custom_color_selected_section">Color of selected section</string>
    <string name="custom_color_progress">Color of loading icon</string>
    <string name="custom_color_not_confirmed">Not confirmed color</string>
    <string name="custom_color_Table_column">Table column Color</string>
    <string name="custom_color_notification_on">Notification on color</string>
    <string name="custom_color_notification_off">Notification off color</string>
    <string name="custom_color_switch_on">Color of enabled  switch</string>
    <string name="custom_color_switch_off">Color of disabled switch</string>
    <string name="custom_color_block_choose_background">Background color of choose block</string>
    <string name="custom_color_block_choose_border">Border color of choose block and dialogs</string>
    <string name="custom_color_audio_player">Сolor of audio player</string>
    <string name="_0_Min">minute</string>
    <string name="_1_Min">minute</string>
    <string name="_2_4_Min">minutes</string>
    <string name="_5_20_Min">minutes</string>
    <string name="_end_1_Min">minutes</string>
    <string name="_end_2_4_Min">minutes</string>
    <string name="_end_5_9_Min">minutes</string>
    <string name="_end_0_Min">minutes</string>
    <string name="_1_Hour">hour</string>
    <string name="_2_4_Hour">hours</string>
    <string name="_5_20_Hour">hours</string>
    <string name="_end_1_Hour">hours</string>
</resources>