<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/corners_alert"
    android:id="@+id/alert_delete"
    android:layout_gravity="center_horizontal">

    <TextView
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/title_alert"
        android:text="@string/clearWeek"
        android:textColor="@android:color/black"
        android:textSize="22dp" />

    <TextView
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/title_bottom_alert"
        android:text="@string/deleteAllLesson"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:layout_gravity="right"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:id="@+id/button_one_alert"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/custom_button_add"
            android:text="@string/buttonClearGrades"
            android:textSize="19dp"
            android:layout_marginRight="15dp"
            />

        <TextView
            android:gravity="center"
            android:id="@+id/button_two_alert"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/custom_button_add"
            android:text="@string/buttonClearHomeWork"
            android:textSize="19dp"
            android:layout_marginRight="15dp"
            />

        <TextView
            android:gravity="center"
            android:id="@+id/button_three_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/buttonClearAll"
            android:textColor="@color/custom_button_add"
            android:textSize="19dp" />

    </LinearLayout>
</LinearLayout>