<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">
<!--    bug fix-->

<androidx.cardview.widget.CardView
    android:id="@+id/card_table"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@android:color/darker_gray"
    app:cardCornerRadius="20dp"
    >

        <LinearLayout
            android:id="@+id/tableDnew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:hyphenationFrequency="normal"
                tools:targetApi="m"
                android:background="@android:color/white"
                android:id="@+id/textViewNameDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:gravity="center">

                <TextView
                    android:hyphenationFrequency="normal"
                    tools:targetApi="m"
                    android:id="@+id/card_tab_one"
                    android:text="@string/lessonConst"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_marginEnd="1dp"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:hyphenationFrequency="normal"
                    tools:targetApi="m"
                    android:id="@+id/card_tab_two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_marginEnd="1dp"
                    android:text="@string/homeworkConst"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:hyphenationFrequency="normal"
                    tools:targetApi="m"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:color/white"
                    android:id="@+id/card_tab_three"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:text="@string/grades"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:overScrollMode="never"
                android:fadeScrollbars="false"
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                />
        </LinearLayout>
</androidx.cardview.widget.CardView>
</FrameLayout>